// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator Results component renders correctly 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-1 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.tiles
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda Protector main tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector main tile black"
          >
            1418
          </div>
          <button
            aria-label="Remove Zanda Protector main tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector main tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector main tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda Protector half tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector half tile black"
          >
            32
          </div>
          <button
            aria-label="Remove Zanda Protector half tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector half tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector half tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_ridge tile black
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_ridge tile black"
          >
            49
          </div>
          <button
            aria-label="Remove Zanda_Protector_ridge tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_ridge tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_ridge tile black"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-1 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.fixings
        </h6>
      </div>
      <div>
        <div>
          <div>
            Clips
          </div>
          <div
            aria-label="Quantity for Clips"
          >
            97
          </div>
          <button
            aria-label="Remove Clips"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Clips"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Clips"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Ridge and Hip Screw
          </div>
          <div
            aria-label="Quantity for Ridge and Hip Screw"
          >
            97
          </div>
          <button
            aria-label="Remove Ridge and Hip Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ridge and Hip Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ridge and Hip Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Long Screw
          </div>
          <div
            aria-label="Quantity for Long Screw"
          >
            281
          </div>
          <button
            aria-label="Remove Long Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Long Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Long Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Screw
          </div>
          <div
            aria-label="Quantity for Screw"
          >
            1312
          </div>
          <button
            aria-label="Remove Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Finishing Kit
          </div>
          <div
            aria-label="Quantity for Finishing Kit"
          >
            1
          </div>
          <button
            aria-label="Remove Finishing Kit"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Finishing Kit"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Finishing Kit"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-1 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.ventilation
        </h6>
      </div>
      <div>
        <div>
          <div>
            Ventilation Hood 1
          </div>
          <div
            aria-label="Quantity for Ventilation Hood 1"
          >
            1
          </div>
          <button
            aria-label="Remove Ventilation Hood 1"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ventilation Hood 1"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ventilation Hood 1"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-1 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.sealing
        </h6>
      </div>
      <div>
        <div>
          <div>
            M_Glue_290ml
          </div>
          <div
            aria-label="Quantity for M_Glue_290ml"
          >
            0
          </div>
          <button
            aria-label="Remove M_Glue_290ml"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of M_Glue_290ml"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of M_Glue_290ml"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-1 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.accessories
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black left start
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black left start"
          >
            3
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black left start"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black left start"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black left start"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black left
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black left"
          >
            105
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black left"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black left"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black left"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black right start
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black right start"
          >
            3
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black right start"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black right start"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black right start"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black right
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black right"
          >
            105
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black right"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black right"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black right"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Fuglelist ventilert
          </div>
          <div
            aria-label="Quantity for Fuglelist ventilert"
          >
            7
          </div>
          <button
            aria-label="Remove Fuglelist ventilert"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Fuglelist ventilert"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Fuglelist ventilert"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Other accesories example
          </div>
          <div
            aria-label="Quantity for Other accesories example"
          >
            0
          </div>
          <button
            aria-label="Remove Other accesories example"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Other accesories example"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Other accesories example"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Test Guttering Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Grey"
          >
            11
          </div>
          <button
            aria-label="Remove Test Guttering Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Test Guttering Hook Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Hook Grey"
          >
            15
          </div>
          <button
            aria-label="Remove Test Guttering Hook Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Hook Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Hook Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe
          </div>
          <div
            aria-label="Quantity for Downpipe"
          >
            3
          </div>
          <button
            aria-label="Remove Downpipe"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe Connector
          </div>
          <div
            aria-label="Quantity for Downpipe Connector"
          >
            4
          </div>
          <button
            aria-label="Remove Downpipe Connector"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe Connector"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe Connector"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Underlay Divoroll TOP RU
          </div>
          <div
            aria-label="Quantity for Underlay Divoroll TOP RU"
          >
            4
          </div>
          <button
            aria-label="Remove Underlay Divoroll TOP RU"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Underlay Divoroll TOP RU"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Underlay Divoroll TOP RU"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-9 ColorPair-root-16 ColorPair-alert-24"
      >
        <div
          class="AlertBanner-actions-13"
        />
        <div
          class="Container-root-42"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-14 Typography-root-1 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-15"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              MC: results.alerts.quantities.not.updated.title
            </h5>
            MC: results.alerts.quantities.not.updated.text
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-9 ColorPair-root-16 ColorPair-alabaster-25"
      >
        <div
          class="AlertBanner-actions-13"
        />
        <div
          class="Container-root-42"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-14 Typography-root-1 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-15"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              MC: results.alerts.needToKnow.title
            </h5>
            MC: results.alerts.needToKnow.text
          </div>
        </div>
      </div>
    </div>
    <iframe
      title="HubSpot Form"
    />
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with debugging mode on 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-52 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.tiles
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda Protector main tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector main tile black"
          >
            1418
          </div>
          <button
            aria-label="Remove Zanda Protector main tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector main tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector main tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda Protector half tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector half tile black"
          >
            32
          </div>
          <button
            aria-label="Remove Zanda Protector half tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector half tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector half tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_ridge tile black
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_ridge tile black"
          >
            49
          </div>
          <button
            aria-label="Remove Zanda_Protector_ridge tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_ridge tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_ridge tile black"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-52 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.fixings
        </h6>
      </div>
      <div>
        <div>
          <div>
            Clips
          </div>
          <div
            aria-label="Quantity for Clips"
          >
            97
          </div>
          <button
            aria-label="Remove Clips"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Clips"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Clips"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Ridge and Hip Screw
          </div>
          <div
            aria-label="Quantity for Ridge and Hip Screw"
          >
            97
          </div>
          <button
            aria-label="Remove Ridge and Hip Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ridge and Hip Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ridge and Hip Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Long Screw
          </div>
          <div
            aria-label="Quantity for Long Screw"
          >
            281
          </div>
          <button
            aria-label="Remove Long Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Long Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Long Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Screw
          </div>
          <div
            aria-label="Quantity for Screw"
          >
            1312
          </div>
          <button
            aria-label="Remove Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Finishing Kit
          </div>
          <div
            aria-label="Quantity for Finishing Kit"
          >
            1
          </div>
          <button
            aria-label="Remove Finishing Kit"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Finishing Kit"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Finishing Kit"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-52 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.ventilation
        </h6>
      </div>
      <div>
        <div>
          <div>
            Ventilation Hood 1
          </div>
          <div
            aria-label="Quantity for Ventilation Hood 1"
          >
            1
          </div>
          <button
            aria-label="Remove Ventilation Hood 1"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ventilation Hood 1"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ventilation Hood 1"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-52 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.sealing
        </h6>
      </div>
      <div>
        <div>
          <div>
            M_Glue_290ml
          </div>
          <div
            aria-label="Quantity for M_Glue_290ml"
          >
            0
          </div>
          <button
            aria-label="Remove M_Glue_290ml"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of M_Glue_290ml"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of M_Glue_290ml"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-52 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.accessories
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black left start
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black left start"
          >
            3
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black left start"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black left start"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black left start"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black left
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black left"
          >
            105
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black left"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black left"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black left"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black right start
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black right start"
          >
            3
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black right start"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black right start"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black right start"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black right
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black right"
          >
            105
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black right"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black right"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black right"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Test Guttering Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Grey"
          >
            11
          </div>
          <button
            aria-label="Remove Test Guttering Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Test Guttering Hook Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Hook Grey"
          >
            15
          </div>
          <button
            aria-label="Remove Test Guttering Hook Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Hook Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Hook Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe
          </div>
          <div
            aria-label="Quantity for Downpipe"
          >
            3
          </div>
          <button
            aria-label="Remove Downpipe"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe Connector
          </div>
          <div
            aria-label="Quantity for Downpipe Connector"
          >
            4
          </div>
          <button
            aria-label="Remove Downpipe Connector"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe Connector"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe Connector"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Underlay Divoroll TOP RU
          </div>
          <div
            aria-label="Quantity for Underlay Divoroll TOP RU"
          >
            4
          </div>
          <button
            aria-label="Remove Underlay Divoroll TOP RU"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Underlay Divoroll TOP RU"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Underlay Divoroll TOP RU"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Fuglelist ventilert
          </div>
          <div
            aria-label="Quantity for Fuglelist ventilert"
          >
            7
          </div>
          <button
            aria-label="Remove Fuglelist ventilert"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Fuglelist ventilert"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Fuglelist ventilert"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Other accesories example
          </div>
          <div
            aria-label="Quantity for Other accesories example"
          >
            0
          </div>
          <button
            aria-label="Remove Other accesories example"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Other accesories example"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Other accesories example"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-60 ColorPair-root-67 ColorPair-alert-75"
      >
        <div
          class="AlertBanner-actions-64"
        />
        <div
          class="Container-root-93"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-65 Typography-root-52 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-66"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              MC: results.alerts.quantities.not.updated.title
            </h5>
            MC: results.alerts.quantities.not.updated.text
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-60 ColorPair-root-67 ColorPair-alabaster-76"
      >
        <div
          class="AlertBanner-actions-64"
        />
        <div
          class="Container-root-93"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-65 Typography-root-52 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-66"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              MC: results.alerts.needToKnow.title
            </h5>
            MC: results.alerts.needToKnow.text
          </div>
        </div>
      </div>
    </div>
    <iframe
      title="HubSpot Form"
    />
    <div
      class="FieldContainer"
    >
      <h3
        class="MuiTypography-root Typography-root-52 MuiTypography-h3"
        data-testid="typography"
      >
        Measurements (showing because debugging mode is ON)
      </h3>
      <h4
        class="MuiTypography-root Typography-root-52 MuiTypography-h4"
        data-testid="typography"
      >
        Lines
      </h4>
      <ul>
        <li>
          <b>
            ridge
            :
          </b>
           
          1500.00
        </li>
        <li>
          <b>
            eave
            :
          </b>
           
          900.00 | 900.00 | 1500.00 | 1500.00
        </li>
        <li>
          <b>
            leftVerge
            :
          </b>
           
          505.05 | 505.05
        </li>
        <li>
          <b>
            rightVerge
            :
          </b>
           
          505.05 | 505.05
        </li>
      </ul>
      <h4
        class="MuiTypography-root Typography-root-52 MuiTypography-h4"
        data-testid="typography"
      >
        Faces
      </h4>
      <ul>
        <li>
          <b>
            face 
            1
             battens (width):
          </b>
           
          1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
        </li>
        <li>
          <b>
            face 
            2
             battens (width):
          </b>
           
          1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with default ridge 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-205 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.tiles
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda Protector main tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector main tile black"
          >
            1418
          </div>
          <button
            aria-label="Remove Zanda Protector main tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector main tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector main tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda Protector half tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector half tile black"
          >
            32
          </div>
          <button
            aria-label="Remove Zanda Protector half tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector half tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector half tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_ridge tile black
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_ridge tile black"
          >
            49
          </div>
          <button
            aria-label="Remove Zanda_Protector_ridge tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_ridge tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_ridge tile black"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-205 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.fixings
        </h6>
      </div>
      <div>
        <div>
          <div>
            Clips
          </div>
          <div
            aria-label="Quantity for Clips"
          >
            97
          </div>
          <button
            aria-label="Remove Clips"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Clips"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Clips"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Ridge and Hip Screw
          </div>
          <div
            aria-label="Quantity for Ridge and Hip Screw"
          >
            97
          </div>
          <button
            aria-label="Remove Ridge and Hip Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ridge and Hip Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ridge and Hip Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Long Screw
          </div>
          <div
            aria-label="Quantity for Long Screw"
          >
            281
          </div>
          <button
            aria-label="Remove Long Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Long Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Long Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Screw
          </div>
          <div
            aria-label="Quantity for Screw"
          >
            1312
          </div>
          <button
            aria-label="Remove Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Finishing Kit
          </div>
          <div
            aria-label="Quantity for Finishing Kit"
          >
            1
          </div>
          <button
            aria-label="Remove Finishing Kit"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Finishing Kit"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Finishing Kit"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-205 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.ventilation
        </h6>
      </div>
      <div>
        <div>
          <div>
            Ventilation Hood 1
          </div>
          <div
            aria-label="Quantity for Ventilation Hood 1"
          >
            1
          </div>
          <button
            aria-label="Remove Ventilation Hood 1"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ventilation Hood 1"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ventilation Hood 1"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-205 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.sealing
        </h6>
      </div>
      <div>
        <div>
          <div>
            M_Glue_290ml
          </div>
          <div
            aria-label="Quantity for M_Glue_290ml"
          >
            0
          </div>
          <button
            aria-label="Remove M_Glue_290ml"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of M_Glue_290ml"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of M_Glue_290ml"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-205 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.accessories
        </h6>
      </div>
      <div>
        <div>
          <div>
            Test Guttering Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Grey"
          >
            11
          </div>
          <button
            aria-label="Remove Test Guttering Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Test Guttering Hook Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Hook Grey"
          >
            15
          </div>
          <button
            aria-label="Remove Test Guttering Hook Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Hook Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Hook Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe
          </div>
          <div
            aria-label="Quantity for Downpipe"
          >
            3
          </div>
          <button
            aria-label="Remove Downpipe"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe Connector
          </div>
          <div
            aria-label="Quantity for Downpipe Connector"
          >
            4
          </div>
          <button
            aria-label="Remove Downpipe Connector"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe Connector"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe Connector"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Underlay Divoroll TOP RU
          </div>
          <div
            aria-label="Quantity for Underlay Divoroll TOP RU"
          >
            4
          </div>
          <button
            aria-label="Remove Underlay Divoroll TOP RU"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Underlay Divoroll TOP RU"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Underlay Divoroll TOP RU"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Fuglelist ventilert
          </div>
          <div
            aria-label="Quantity for Fuglelist ventilert"
          >
            7
          </div>
          <button
            aria-label="Remove Fuglelist ventilert"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Fuglelist ventilert"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Fuglelist ventilert"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Other accesories example
          </div>
          <div
            aria-label="Quantity for Other accesories example"
          >
            0
          </div>
          <button
            aria-label="Remove Other accesories example"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Other accesories example"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Other accesories example"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-213 ColorPair-root-220 ColorPair-alert-228"
      >
        <div
          class="AlertBanner-actions-217"
        />
        <div
          class="Container-root-246"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-218 Typography-root-205 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-219"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              MC: results.alerts.quantities.not.updated.title
            </h5>
            MC: results.alerts.quantities.not.updated.text
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-213 ColorPair-root-220 ColorPair-alabaster-229"
      >
        <div
          class="AlertBanner-actions-217"
        />
        <div
          class="Container-root-246"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-218 Typography-root-205 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-219"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              MC: results.alerts.needToKnow.title
            </h5>
            MC: results.alerts.needToKnow.text
          </div>
        </div>
      </div>
    </div>
    <iframe
      title="HubSpot Form"
    />
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with main tile as verge 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-154 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.tiles
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda Protector main tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector main tile black"
          >
            1418
          </div>
          <button
            aria-label="Remove Zanda Protector main tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector main tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector main tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda Protector half tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector half tile black"
          >
            32
          </div>
          <button
            aria-label="Remove Zanda Protector half tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector half tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector half tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_ridge tile black
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_ridge tile black"
          >
            49
          </div>
          <button
            aria-label="Remove Zanda_Protector_ridge tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_ridge tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_ridge tile black"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-154 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.fixings
        </h6>
      </div>
      <div>
        <div>
          <div>
            Clips
          </div>
          <div
            aria-label="Quantity for Clips"
          >
            97
          </div>
          <button
            aria-label="Remove Clips"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Clips"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Clips"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Ridge and Hip Screw
          </div>
          <div
            aria-label="Quantity for Ridge and Hip Screw"
          >
            97
          </div>
          <button
            aria-label="Remove Ridge and Hip Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ridge and Hip Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ridge and Hip Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Long Screw
          </div>
          <div
            aria-label="Quantity for Long Screw"
          >
            281
          </div>
          <button
            aria-label="Remove Long Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Long Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Long Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Screw
          </div>
          <div
            aria-label="Quantity for Screw"
          >
            1312
          </div>
          <button
            aria-label="Remove Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Finishing Kit
          </div>
          <div
            aria-label="Quantity for Finishing Kit"
          >
            1
          </div>
          <button
            aria-label="Remove Finishing Kit"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Finishing Kit"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Finishing Kit"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-154 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.ventilation
        </h6>
      </div>
      <div>
        <div>
          <div>
            Ventilation Hood 1
          </div>
          <div
            aria-label="Quantity for Ventilation Hood 1"
          >
            1
          </div>
          <button
            aria-label="Remove Ventilation Hood 1"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ventilation Hood 1"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ventilation Hood 1"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-154 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.sealing
        </h6>
      </div>
      <div>
        <div>
          <div>
            M_Glue_290ml
          </div>
          <div
            aria-label="Quantity for M_Glue_290ml"
          >
            0
          </div>
          <button
            aria-label="Remove M_Glue_290ml"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of M_Glue_290ml"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of M_Glue_290ml"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-154 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.accessories
        </h6>
      </div>
      <div>
        <div>
          <div>
            Test Guttering Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Grey"
          >
            11
          </div>
          <button
            aria-label="Remove Test Guttering Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Test Guttering Hook Grey
          </div>
          <div
            aria-label="Quantity for Test Guttering Hook Grey"
          >
            15
          </div>
          <button
            aria-label="Remove Test Guttering Hook Grey"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Test Guttering Hook Grey"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Test Guttering Hook Grey"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe
          </div>
          <div
            aria-label="Quantity for Downpipe"
          >
            3
          </div>
          <button
            aria-label="Remove Downpipe"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Downpipe Connector
          </div>
          <div
            aria-label="Quantity for Downpipe Connector"
          >
            4
          </div>
          <button
            aria-label="Remove Downpipe Connector"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Downpipe Connector"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Downpipe Connector"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Underlay Divoroll TOP RU
          </div>
          <div
            aria-label="Quantity for Underlay Divoroll TOP RU"
          >
            4
          </div>
          <button
            aria-label="Remove Underlay Divoroll TOP RU"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Underlay Divoroll TOP RU"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Underlay Divoroll TOP RU"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Fuglelist ventilert
          </div>
          <div
            aria-label="Quantity for Fuglelist ventilert"
          >
            7
          </div>
          <button
            aria-label="Remove Fuglelist ventilert"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Fuglelist ventilert"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Fuglelist ventilert"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Other accesories example
          </div>
          <div
            aria-label="Quantity for Other accesories example"
          >
            0
          </div>
          <button
            aria-label="Remove Other accesories example"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Other accesories example"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Other accesories example"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-162 ColorPair-root-169 ColorPair-alert-177"
      >
        <div
          class="AlertBanner-actions-166"
        />
        <div
          class="Container-root-195"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-167 Typography-root-154 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-168"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              MC: results.alerts.quantities.not.updated.title
            </h5>
            MC: results.alerts.quantities.not.updated.text
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-162 ColorPair-root-169 ColorPair-alabaster-178"
      >
        <div
          class="AlertBanner-actions-166"
        />
        <div
          class="Container-root-195"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-167 Typography-root-154 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-168"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              MC: results.alerts.needToKnow.title
            </h5>
            MC: results.alerts.needToKnow.text
          </div>
        </div>
      </div>
    </div>
    <iframe
      title="HubSpot Form"
    />
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with no guttering 1`] = `
<div>
  <div
    class="Results"
  >
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-103 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.tiles
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda Protector main tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector main tile black"
          >
            1418
          </div>
          <button
            aria-label="Remove Zanda Protector main tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector main tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector main tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda Protector half tile black
          </div>
          <div
            aria-label="Quantity for Zanda Protector half tile black"
          >
            32
          </div>
          <button
            aria-label="Remove Zanda Protector half tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda Protector half tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda Protector half tile black"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_ridge tile black
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_ridge tile black"
          >
            49
          </div>
          <button
            aria-label="Remove Zanda_Protector_ridge tile black"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_ridge tile black"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_ridge tile black"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-103 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.fixings
        </h6>
      </div>
      <div>
        <div>
          <div>
            Clips
          </div>
          <div
            aria-label="Quantity for Clips"
          >
            97
          </div>
          <button
            aria-label="Remove Clips"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Clips"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Clips"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Ridge and Hip Screw
          </div>
          <div
            aria-label="Quantity for Ridge and Hip Screw"
          >
            97
          </div>
          <button
            aria-label="Remove Ridge and Hip Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ridge and Hip Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ridge and Hip Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Long Screw
          </div>
          <div
            aria-label="Quantity for Long Screw"
          >
            281
          </div>
          <button
            aria-label="Remove Long Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Long Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Long Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Screw
          </div>
          <div
            aria-label="Quantity for Screw"
          >
            1312
          </div>
          <button
            aria-label="Remove Screw"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Screw"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Screw"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Finishing Kit
          </div>
          <div
            aria-label="Quantity for Finishing Kit"
          >
            1
          </div>
          <button
            aria-label="Remove Finishing Kit"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Finishing Kit"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Finishing Kit"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-103 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.ventilation
        </h6>
      </div>
      <div>
        <div>
          <div>
            Ventilation Hood 1
          </div>
          <div
            aria-label="Quantity for Ventilation Hood 1"
          >
            1
          </div>
          <button
            aria-label="Remove Ventilation Hood 1"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Ventilation Hood 1"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Ventilation Hood 1"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-103 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.sealing
        </h6>
      </div>
      <div>
        <div>
          <div>
            M_Glue_290ml
          </div>
          <div
            aria-label="Quantity for M_Glue_290ml"
          >
            0
          </div>
          <button
            aria-label="Remove M_Glue_290ml"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of M_Glue_290ml"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of M_Glue_290ml"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer fieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root Typography-root-103 MuiTypography-h6"
          data-testid="typography"
        >
          MC: results.categories.accessories
        </h6>
      </div>
      <div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black left start
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black left start"
          >
            3
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black left start"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black left start"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black left start"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black left
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black left"
          >
            105
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black left"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black left"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black left"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black right start
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black right start"
          >
            3
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black right start"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black right start"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black right start"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Zanda_Protector_verge metal flush black right
          </div>
          <div
            aria-label="Quantity for Zanda_Protector_verge metal flush black right"
          >
            105
          </div>
          <button
            aria-label="Remove Zanda_Protector_verge metal flush black right"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Zanda_Protector_verge metal flush black right"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Zanda_Protector_verge metal flush black right"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Fuglelist ventilert
          </div>
          <div
            aria-label="Quantity for Fuglelist ventilert"
          >
            7
          </div>
          <button
            aria-label="Remove Fuglelist ventilert"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Fuglelist ventilert"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Fuglelist ventilert"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Other accesories example
          </div>
          <div
            aria-label="Quantity for Other accesories example"
          >
            0
          </div>
          <button
            aria-label="Remove Other accesories example"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Other accesories example"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Other accesories example"
          >
            -
          </button>
        </div>
        <div>
          <div>
            Underlay Divoroll TOP RU
          </div>
          <div
            aria-label="Quantity for Underlay Divoroll TOP RU"
          >
            4
          </div>
          <button
            aria-label="Remove Underlay Divoroll TOP RU"
          >
            Delete
          </button>
          <button
            aria-label="Increase quantity of Underlay Divoroll TOP RU"
          >
            +
          </button>
          <button
            aria-label="Decrease quantity of Underlay Divoroll TOP RU"
          >
            -
          </button>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--first"
    >
      <div
        class="AlertBanner-root-111 ColorPair-root-118 ColorPair-alert-126"
      >
        <div
          class="AlertBanner-actions-115"
        />
        <div
          class="Container-root-144"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-116 Typography-root-103 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-117"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              MC: results.alerts.quantities.not.updated.title
            </h5>
            MC: results.alerts.quantities.not.updated.text
          </div>
        </div>
      </div>
    </div>
    <div
      class="Alert Alert--last"
    >
      <div
        class="AlertBanner-root-111 ColorPair-root-118 ColorPair-alabaster-127"
      >
        <div
          class="AlertBanner-actions-115"
        />
        <div
          class="Container-root-144"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <h5
              class="MuiTypography-root AlertBanner-title-116 Typography-root-103 MuiTypography-h5"
              data-testid="typography"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root AlertBanner-icon-117"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
              MC: results.alerts.needToKnow.title
            </h5>
            MC: results.alerts.needToKnow.text
          </div>
        </div>
      </div>
    </div>
    <iframe
      title="HubSpot Form"
    />
  </div>
</div>
`;
